[package]
name = "yt-downloader"
version = "0.2.1"
edition = "2024"

[dependencies]
youtube_dl = { version = "0.10", features = ["tokio", "downloader-rustls-tls"] }
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
eframe = "0.27"
rfd = "0.17.2"
